ci(*): fix android sign
Signed-off-by: Jan Valentik <jvalentik@sk.ibm.com>

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
         release {
             keyAlias System.getenv("BITRISEIO_ANDROID_KEYSTORE_ALIAS")
             keyPassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
-            storeFile file(System.getEnv("HOME") + "/keystores/cloudis.jks")
+            storeFile file(System.getenv("HOME") + "/keystores/cloudis.jks")
             storePassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PASSWORD")
         }
     }
