--- a/codecov.yml
+++ b/codecov.yml
@@ -8,7 +8,7 @@ coverage:
         url: "https://hooks.slack.com/services/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"
 
 comment:
-  layout: "reach, diff, flags, files"
+  layout: "diff, files"
   behavior: default
   require_changes: false  # if true: only post the comment if coverage changes
   require_base: no        # [yes :: must have a base report to post]
